# ArcCluster

./: Cargo.toml  README.md  agent_instructions.md
python/: config.py  pipeline.py  requirements.txt  storage.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: Cargo.toml  Dioxus.toml
ui/public/: style.css
ui/src/: main.rs
