[package]
name = "arccluster-app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["shell-open"] }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
